syntax = "proto3";
import "./typings.proto";

service RouteGuide {
    rpc getCadet(Name) returns (Cadet) {}
}