syntax = "proto3";

message Cadet {
    string name = 1;
    int32 classYear = 2;
}

message Name {
    string value = 1;
}